--- a/hw4/canvasstyle.css
+++ b/hw4/canvasstyle.css
@@ -1,9 +1,3 @@
-svg circle{
-    stroke: none;
-    fill: black;
-    stroke-width: 0;
-}
-
 .axis path,
 .axis line {
 	fill: none;
@@ -16,3 +10,9 @@ svg circle{
 	font-size: 11px;
 	fill: black;
 	}
+	
+.axislabel {
+	font-family: 'Open Sans';
+	font-size: 11px;
+	fill: black;
+}
